# glmmpy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/glmmpy/: __init__.py  utils.py
tests/: test_glmmpy.py
