[tool.poetry]
name = "glmmpy"
version = "0.1.0"
description = "Fit Generalized Linear Mixed Models"
authors = ["Julius Olaifa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.24.3"
scipy = ">=1.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
